<resources>
    <string name="app_name">VolleyDemo</string>

    <string name="btn_open_second">OpenSecond</string>

    <string name="string_request">StringRequest</string>

    <string name="json_request">JsonRequest</string>

    <string name="image_request">ImageRequest</string>

    <string name="image_loader">ImageLoader</string>

    <string name="network_image_view">NetworkImageView</string>

    <string name="get_weather_info">获取天气数据</string>
</resources>
