<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jacksen.volleydemo.MainActivity">


    <Button
        android:id="@+id/open_second_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_open_second" />


    <Button
        android:id="@+id/string_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_request" />

    <Button
        android:id="@+id/json_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/json_request" />


    <TextView
        android:id="@+id/content_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
