<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jacksen.volleydemo.SecondActivity">

    <Button
        android:id="@+id/image_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_request" />

    <Button
        android:id="@+id/image_loader_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_loader" />

    <Button
        android:id="@+id/network_iv_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_image_view" />


    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/network_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
